feat: use Promise project

--- a/wx/project.config.json
+++ b/wx/project.config.json
@@ -15,7 +15,9 @@
             "ignore": [],
             "disablePlugins": [],
             "outputPath": ""
-        }
+        },
+        "es6": true,
+        "enhance": true
     },
     "simulatorType": "wechat",
     "simulatorPluginLibVersion": {},
